--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 endorsed.javafx.ant.classpath=.
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=/Users/diducc/Library/Application Support/NetBeans/12.4/build.properties
+user.properties.file=C:\\Users\\vitol\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
